syntax = "proto3";

package sk.neuromancer.Xune.proto;

option java_outer_classname = "MessageProto";

import "sk/neuromancer/Xune/proto/Level.proto";
import "sk/neuromancer/Xune/proto/Base.proto";

message State {
  // Goes from server to client
  LevelState level = 1;
}

message Action {
  // Goes from client to server
  oneof action {
    EntityProduceAction entityProduce = 1;
    BuildingProduceAction buildingProduce = 2;
    BuildingPlaceAction buildingPlace = 3;
    CommandAction command = 4;
  }
}

message Event {
  // Goes from server to client
  oneof event {
    GameStart gameStart = 1;
    GameEnd gameEnd = 2;
  }
}

message Connection {
  // Goes both ways
  oneof connection {
    ConnectionRequest request = 1;
    ConnectionResponse response = 2;
    Ping ping = 3;
    Pong pong = 4;
  }
}

message ConnectionRequest {

}

message ConnectionResponse {
  uint64 playerId = 1;
}

message Ping {
  uint64 timestamp = 1;
}

message Pong {
  uint64 timestamp = 1;
  uint64 previousTimestamp = 2;
}

message GameStart {
  FullLevelState level = 1;
}

message GameEnd {
  uint64 winnerId = 1;
}

message EntityProduceAction {
  EntityClass klass = 1;
}

message BuildingProduceAction {
  EntityClass klass = 1;
}

message BuildingPlaceAction {
  EntityClass klass = 1;
  Tile position = 2;
}

message CommandAction {
  repeated uint64 entityIds = 1;
  float levelX = 2;
  float levelY = 3;
}